# API4

./: .gitignore  README.md  package-lock.json  package.json
app/: package.json
app/backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-docker.txt  requirements.txt  teste.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: fc4ede558978_criando_tabelas_iniciais.py
app/backend/src/: database.py  main.py  test.py
app/backend/src/controller/: file_controller.py
app/backend/src/memorial/: IA_config.py  generatorteste.py  gernerator.py
app/backend/src/models/: base.py  file_cad.py  project.py  user.py
app/backend/src/modules/: docker-compose.yaml
app/backend/src/modules/BuscarPrecos/: buscar_precos.js  package-lock.json  package.json
app/backend/src/modules/ExtracaoDados/: Dockerfile  Teste.py  extracao_dados (1).py  extracao_dados2.py
app/backend/src/modules/IA/: agent.py
app/backend/src/modules/Memorial/: IA_config.py  dxf_extractor.py  generatorteste.py  memorial_preenchido.xlsx  memorial_prenchido.xlsx  model_memorial.xlsx  motor_de_calculo.py  sinapi.py
app/backend/src/routes/: download.py  routes.py  upload.py
app/backend/src/schemas/: projects.py  user.py
app/backend/src/templates/saida/: memorial_preenchido.xlsx
app/backend/tests/: conftest.py  test_main.py
app/backend/tests/ExtracaoDados/: Teste.py  visualizacao.html
app/backend/tests/controller/: test_file_controller.py
app/backend/tests/models/: test_user.py
app/backend/tests/resultado/: resultado_precos.json
app/backend/tests/src/: conftest.py
(+48 files in other folders)
