[project]
name = "echocad-api"
version = "0.1.0"
description = "Endpoint EchoCad api."
authors = [
    {name = "Wesley",email = "wesley.xvier@gmail.com"}
]
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "ezdxf (>=1.4.3,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "agno (>=2.5.11,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "openai (>=2.30.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
